Update Instacart Market Basket Analysis.ipynb

--- a/Instacart Market Basket Analysis.ipynb
+++ b/Instacart Market Basket Analysis.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#  <h1><center>Instacart - Market Basket Analysis</center></h1>\n",
     "\n",
-    "<img src=\"Instacart.jpg\">\n",
+    "<img src=\"https://goo.gl/images/ger1oc\">\n",
     "Img Source: Kaggle.com\n",
     "\n",
     "## Table of Contents\n",
