Update Instacart Market Basket Analysis.ipynb

--- a/Instacart Market Basket Analysis.ipynb
+++ b/Instacart Market Basket Analysis.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "#  <h1><center>Instacart - Market Basket Analysis</center></h1>\n",
     "\n",
-    "<img src=\"Instakart.jpg
-    ">\n",
+    "<img src=\"Instakart.jpg\">\n",
     "Img Source: Kaggle.com\n",
     "\n",
     "## Table of Contents\n",
